# COP3530Final

./: .gitignore  CMakeLists.txt  LICENSE  MinHeap.cpp  MinHeap.h  README.md  RedBlackTree.cpp  RedBlackTree.h  main.cpp
.github/workflows/: ci.yml
benchmarks/: BENCHMARK.md  bench_heap.cpp  bench_rbtree.cpp  imdb_topk_100mb_top250.txt  results_heap.txt  results_rbtree.txt
build_bench/: .ninja_deps  .ninja_log  build.ninja  cmake_test_discovery_c9b87a8d88.json  cmake_test_discovery_e4b65fe9bf.json  test_cli[1]_include.cmake  test_cli[1]_tests.cmake  test_loader[1]_include.cmake  test_loader[1]_tests.cmake  test_minheap[1]_include.cmake  test_minheap[1]_tests.cmake  test_rbtree[1]_include.cmake  test_rbtree[1]_tests.cmake
build_msvc/: cmake_test_discovery_76ecefe3a9.json  imdb_top250.slnx  test_cli[1]_include.cmake  test_loader[1]_include.cmake  test_loader[1]_tests.cmake  test_minheap[1]_include.cmake  test_minheap[1]_tests.cmake  test_rbtree[1]_include.cmake  test_rbtree[1]_tests.cmake
build_msvc/imdb-topk.dir/Release/: imdb-topk.exe.recipe
build_msvc/imdb-topk.dir/Release/imdb-topk.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_msvc/imdb_core.dir/Release/: imdb_core.lib.recipe
build_msvc/imdb_core.dir/Release/imdb_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_msvc/test_cli.dir/Release/: test_cli.exe.recipe
build_msvc/test_cli.dir/Release/test_cli.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_msvc/test_loader.dir/Release/: test_loader.exe.recipe
build_msvc/test_loader.dir/Release/test_loader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_msvc/test_minheap.dir/Release/: test_minheap.exe.recipe
build_msvc/test_minheap.dir/Release/test_minheap.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_minheap.lastbuildstate
build_msvc/test_rbtree.dir/Release/: test_rbtree.exe.recipe
build_msvc/test_rbtree.dir/Release/test_rbtree.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_verify/: .ninja_deps  .ninja_log  build.ninja  cmake_test_discovery_1e731f73c9.json  test_cli[1]_include.cmake  test_cli[1]_tests.cmake  test_loader[1]_include.cmake  test_loader[1]_tests.cmake  test_minheap[1]_include.cmake  test_minheap[1]_tests.cmake  test_rbtree[1]_include.cmake  test_rbtree[1]_tests.cmake
data/: README.md  sample.tsv
docs/: algorithms.md  foundation.md
include/imdb/: Loader.h  MinHeap.h  Movie.h  RedBlackTree.h  TopK.h
src/: cli.cpp  loader.cpp
tests/: CMakeLists.txt  test_cli.cpp  test_loader.cpp  test_minheap.cpp  test_rbtree.cpp
